@@ -1,9 +1,7 @@
 <?php
 
 require_once dirname(__FILE__) . DIRECTORY_SEPARATOR . 'include' . DIRECTORY_SEPARATOR . 'bittorrent.php';
-require_once INCL_DIR . 'user_functions.php';
-//require_once (INCL_DIR . 'html_functions.php');
-check_user_status();
+
 $radio = [
     'host'     => '',
     'port'     => '',
